--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Lab2_20224926
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/lab2?serverTimezone=America/Lima&useSSL=false&publicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
